Semester 10/Optimization methods 2020 *List 1 **Task 1 **Task 2 **Task 3

--- a/semestr10/metody opt/kod/pom.xml
+++ b/semestr10/metody opt/kod/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>krypto-kod</artifactId>
+    <artifactId>metody-kod</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -25,5 +25,6 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
+
 
 </project>
